[gd_scene load_steps=5 format=3 uid="uid://d4d4p6oy86nf8"]

[ext_resource type="Script" path="res://UserInterface/victory_layer.gd" id="1_4kdii"]
[ext_resource type="Texture2D" uid="uid://c5jycgsiakjlo" path="res://Assets/star.png" id="2_7aeg4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0b6a2"]
bg_color = Color(0, 0, 0, 0.286275)

[sub_resource type="LabelSettings" id="LabelSettings_vtbod"]
font_size = 56

[node name="VictoryLayer" type="CanvasLayer"]
script = ExtResource("1_4kdii")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.670588)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0b6a2")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "You won!"
label_settings = SubResource("LabelSettings_vtbod")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Star" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_7aeg4")
expand_mode = 2
stretch_mode = 4

[node name="Star2" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_7aeg4")
expand_mode = 2
stretch_mode = 4

[node name="Star3" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(108, 108)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_7aeg4")
expand_mode = 2
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Survived" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Survived +1"
horizontal_alignment = 1

[node name="FullHealth" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Full health +1"
horizontal_alignment = 1

[node name="Gold" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Money money money +1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
